main/default/objects/Rating_Specific_Value__c/Rating_Specific_Value__c.object-meta.xml
<CustomObject>
    <label>Rating Specific Value</label>
    <nameField>
        <displayFormat>RSV-{00000}</displayFormat>
        <label>Rating Specific Value</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rating Specific Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>