main/default/objects/Rating_Specific_Value__c/fields/Factor__c.field-meta.xml
<CustomField>
    <fullName>Factor__c</fullName>
    <label>Factor</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>