main/default/objects/Rating_Specific_Value__c/fields/Rating_Specific_Value_Id__c.field-meta.xml
<CustomField>
    <fullName>Rating_Specific_Value_Id__c</fullName>
    <externalId>true</externalId>
    <label>Rating Specific Value Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>