main/default/objects/Rating_Specific_Value__c/fields/Specific_Value__c.field-meta.xml
<CustomField>
    <fullName>Specific_Value__c</fullName>
    <label>Specific Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>