main/default/objects/Rating_Specific_Value__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>