main/default/objects/Rating_Specific_Value__c/fields/UW_Code__c.field-meta.xml
<CustomField>
    <fullName>UW_Code__c</fullName>
    <label>UW Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>